--- a/Faster5/app/src/main/res/layout/layout_wait_popup.xml
+++ b/Faster5/app/src/main/res/layout/layout_wait_popup.xml
@@ -8,8 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
+        android:layout_marginLeft="@dimen/layout_marginLeft_40"
+        android:layout_marginRight="@dimen/layout_marginRight_40"
         android:background="@drawable/xml_popup_bg_white"
         android:orientation="vertical">
 
@@ -17,34 +17,34 @@
             android:id="@+id/textview_ready"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/layout_marginTop_10"
             android:ellipsize="end"
             android:gravity="center"
             android:lines="1"
             android:text="@string/title_wait_popup"
             android:textColor="#00366D"
-            android:textSize="30sp" />
+            android:textSize="@dimen/text_size_huge" />
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:layout_marginTop="10dp"
+            android:layout_height="@dimen/layout_height_3"
+            android:layout_marginTop="@dimen/layout_marginTop_10"
             android:background="#00366D" />
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="@dimen/layout_marginTop_20">
 
             <Button
                 android:id="@+id/btn_guide1"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginStart="30dp"
+                android:layout_width="@dimen/layout_width_40"
+                android:layout_height="@dimen/layout_height_40"
+                android:layout_marginLeft="@dimen/layout_marginLeft_30"
+                android:layout_marginStart="@dimen/layout_marginLeft_30"
                 android:background="@drawable/number_question"
-                android:paddingBottom="3dp"
-                android:paddingRight="3dp"
+                android:paddingBottom="@dimen/paddingBottom_3"
+                android:paddingRight="@dimen/paddingRight_3"
                 android:text="@string/second_wait_popup"
                 android:textColor="#fff"
                 android:textStyle="bold" />
@@ -54,14 +54,14 @@
                 android:layout_height="wrap_content"
                 android:layout_alignLeft="@+id/btn_guide1"
                 android:layout_alignStart="@+id/btn_guide1"
-                android:layout_marginLeft="70dp"
-                android:layout_marginStart="70dp"
+                android:layout_marginLeft="@dimen/layout_marginLeft_70"
+                android:layout_marginStart="@dimen/layout_marginRight_70"
                 android:ellipsize="end"
                 android:lines="1"
-                android:paddingTop="10dp"
+                android:paddingTop="@dimen/paddingTop_10"
                 android:text="@string/help4_wait_popup"
                 android:textColor="#00366D"
-                android:textSize="14sp"
+                android:textSize="@dimen/text_size_vsmall"
                 android:textStyle="bold" />
         </RelativeLayout>
 
@@ -71,12 +71,12 @@
 
             <Button
                 android:id="@+id/btn_guide2"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginStart="30dp"
+                android:layout_width="@dimen/layout_width_40"
+                android:layout_height="@dimen/layout_height_40"
+                android:layout_marginLeft="@dimen/layout_marginLeft_30"
+                android:layout_marginStart="@dimen/layout_marginLeft_30"
                 android:background="@drawable/save1"
-                android:paddingBottom="3dp"
+                android:paddingBottom="@dimen/paddingBottom_3"
                 android:textStyle="bold" />
 
             <TextView
@@ -84,14 +84,14 @@
                 android:layout_height="wrap_content"
                 android:layout_alignLeft="@+id/btn_guide2"
                 android:layout_alignStart="@+id/btn_guide2"
-                android:layout_marginLeft="70dp"
-                android:layout_marginStart="70dp"
+                android:layout_marginLeft="@dimen/layout_marginLeft_70"
+                android:layout_marginStart="@dimen/layout_marginRight_70"
                 android:ellipsize="end"
                 android:lines="1"
-                android:paddingTop="10dp"
+                android:paddingTop="@dimen/paddingTop_10"
                 android:text="@string/help1_wait_popup"
                 android:textColor="#00366D"
-                android:textSize="14sp"
+                android:textSize="@dimen/text_size_vsmall"
                 android:textStyle="bold" />
         </RelativeLayout>
 
@@ -101,12 +101,12 @@
 
             <Button
                 android:id="@+id/btn_guide3"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginStart="30dp"
+                android:layout_width="@dimen/layout_width_40"
+                android:layout_height="@dimen/layout_height_40"
+                android:layout_marginLeft="@dimen/layout_marginLeft_30"
+                android:layout_marginStart="@dimen/layout_marginLeft_30"
                 android:background="@drawable/save2"
-                android:paddingBottom="3dp"
+                android:paddingBottom="@dimen/paddingBottom_3"
                 android:textStyle="bold" />
 
             <TextView
@@ -114,14 +114,14 @@
                 android:layout_height="wrap_content"
                 android:layout_alignLeft="@+id/btn_guide3"
                 android:layout_alignStart="@+id/btn_guide3"
-                android:layout_marginLeft="70dp"
-                android:layout_marginStart="70dp"
+                android:layout_marginLeft="@dimen/layout_marginLeft_70"
+                android:layout_marginStart="@dimen/layout_marginRight_70"
                 android:ellipsize="end"
                 android:lines="1"
-                android:paddingTop="10dp"
+                android:paddingTop="@dimen/paddingTop_10"
                 android:text="@string/help2_wait_popup"
                 android:textColor="#00366D"
-                android:textSize="14sp"
+                android:textSize="@dimen/text_size_vsmall"
                 android:textStyle="bold" />
         </RelativeLayout>
 
@@ -131,12 +131,12 @@
 
             <Button
                 android:id="@+id/btn_guide4"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginStart="30dp"
+                android:layout_width="@dimen/layout_width_40"
+                android:layout_height="@dimen/layout_height_40"
+                android:layout_marginLeft="@dimen/layout_marginLeft_30"
+                android:layout_marginStart="@dimen/layout_marginLeft_30"
                 android:background="@drawable/save3"
-                android:paddingBottom="3dp"
+                android:paddingBottom="@dimen/paddingBottom_3"
                 android:textStyle="bold" />
 
             <TextView
@@ -144,13 +144,13 @@
                 android:layout_height="wrap_content"
                 android:layout_alignLeft="@+id/btn_guide4"
                 android:layout_alignStart="@+id/btn_guide4"
-                android:layout_marginLeft="70dp"
-                android:layout_marginStart="70dp"
+                android:layout_marginLeft="@dimen/layout_marginLeft_70"
+                android:layout_marginStart="@dimen/layout_marginRight_70"
                 android:lines="2"
-                android:paddingTop="10dp"
+                android:paddingTop="@dimen/paddingTop_10"
                 android:text="@string/help3_wait_popup"
                 android:textColor="#00366D"
-                android:textSize="14sp"
+                android:textSize="@dimen/text_size_vsmall"
                 android:textStyle="bold" />
         </RelativeLayout>
 
@@ -159,19 +159,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginBottom="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginBottom="@dimen/layout_marginBottom_20"
+            android:layout_marginLeft="@dimen/layout_marginLeft_20"
+            android:layout_marginRight="@dimen/layout_marginRight_20"
+            android:layout_marginTop="@dimen/layout_marginTop_20"
             android:ellipsize="end"
             android:gravity="center"
             android:lines="1"
             android:maxLines="3"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
+            android:paddingLeft="@dimen/paddingLeft_10"
+            android:paddingRight="@dimen/paddingRight_10"
             android:text="@string/text_wait_popup"
             android:textColor="#EEA542"
-            android:textSize="24sp"
+            android:textSize="@dimen/text_size_xxlarge"
             android:textStyle="bold" />
 
 
