--- a/Faster5/app/src/main/res/layout/play_screen.xml
+++ b/Faster5/app/src/main/res/layout/play_screen.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/layout_marginTop_10"
         android:orientation="horizontal">
 
         <RelativeLayout
@@ -19,31 +19,32 @@
             android:layout_height="wrap_content"
             android:layout_weight="1">
 
-            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+            <de.hdodenhof.circleimageview.CircleImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/imageview_useravatar1"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="30dp"
+                android:layout_width="@dimen/layout_width_50"
+                android:layout_height="@dimen/layout_height_50"
+                android:layout_marginLeft="@dimen/layout_marginLeft_20"
+                android:layout_marginStart="@dimen/layout_marginLeft_20"
+                android:layout_marginTop="@dimen/layout_marginTop_30"
                 android:src="@drawable/avatar"
                 app:civ_border_color="#fff"
-                app:civ_border_width="1dp" />
+                app:civ_border_width="@dimen/civ_border_width_1" />
 
             <TextView
                 android:id="@+id/textview_username1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignTop="@+id/imageview_useravatar1"
-                android:layout_marginLeft="5dp"
-                android:layout_marginStart="5dp"
+                android:layout_marginLeft="@dimen/layout_marginLeft_5"
+                android:layout_marginStart="@dimen/layout_marginLeft_5"
                 android:layout_toEndOf="@+id/imageview_useravatar1"
                 android:layout_toRightOf="@+id/imageview_useravatar1"
                 android:ellipsize="end"
                 android:lines="1"
                 android:text="@string/player"
                 android:textColor="#ffffff"
-                android:textSize="20sp"
+                android:textSize="@dimen/text_size_xlarge"
                 android:textStyle="bold" />
 
             <TextView
@@ -57,24 +58,24 @@
                 android:lines="1"
                 android:text="@string/city"
                 android:textColor="#ffffff"
-                android:textSize="15sp"
+                android:textSize="@dimen/text_size_small"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textview_money1"
-                android:layout_width="160dp"
-                android:layout_height="35dp"
+                android:layout_width="@dimen/layout_width_160"
+                android:layout_height="@dimen/layout_height_35"
                 android:layout_alignLeft="@+id/imageview_useravatar1"
                 android:layout_alignStart="@+id/imageview_useravatar1"
                 android:layout_below="@+id/imageview_useravatar1"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="@dimen/layout_marginTop_10"
                 android:background="@drawable/button_money"
                 android:gravity="center_horizontal"
-                android:paddingTop="5dp"
+                android:paddingTop="@dimen/paddingTop_5"
                 android:text="@string/money_default"
                 android:textColor="#000000"
-                android:textSize="16sp"
+                android:textSize="@dimen/text_size_xsmall"
                 android:textStyle="bold" />
 
 
@@ -82,15 +83,15 @@
 
         <TextView
             android:id="@+id/textview_timer"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="@dimen/layout_width_80"
+            android:layout_height="@dimen/layout_height_80"
             android:layout_gravity="center"
             android:background="@drawable/clock"
             android:gravity="center_horizontal|center_vertical"
             android:text="@string/money_default"
-            android:paddingBottom="1dp"
+            android:paddingBottom="@dimen/paddingBottom_1"
             android:textColor="#FFF"
-            android:textSize="24sp"
+            android:textSize="@dimen/text_size_xxlarge"
             android:textStyle="bold" />
 
         <RelativeLayout
@@ -98,33 +99,34 @@
             android:layout_height="wrap_content"
             android:layout_weight="1">
 
-            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+            <de.hdodenhof.circleimageview.CircleImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/imageview_useravatar2"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="@dimen/layout_width_50"
+                android:layout_height="@dimen/layout_height_50"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginRight="@dimen/layout_marginRight_20"
+                android:layout_marginEnd="@dimen/layout_marginRight_20"
+                android:layout_marginTop="@dimen/layout_marginTop_30"
                 android:src="@drawable/avatar"
                 app:civ_border_color="#fff"
-                app:civ_border_width="1dp" />
+                app:civ_border_width="@dimen/civ_border_width_1" />
 
             <TextView
                 android:id="@+id/textview_username2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignTop="@+id/imageview_useravatar2"
-                android:layout_marginRight="5dp"
-                android:layout_marginEnd="5dp"
+                android:layout_marginRight="@dimen/layout_marginRight_5"
+                android:layout_marginEnd="@dimen/layout_marginRight_5"
                 android:layout_toLeftOf="@+id/imageview_useravatar2"
                 android:layout_toStartOf="@+id/imageview_useravatar2"
                 android:ellipsize="end"
                 android:lines="1"
                 android:text="@string/enemy"
                 android:textColor="#ffffff"
-                android:textSize="20sp"
+                android:textSize="@dimen/text_size_xlarge"
                 android:textStyle="bold" />
 
             <TextView
@@ -132,29 +134,30 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignRight="@+id/textview_username2"
+                android:layout_alignEnd="@+id/textview_username2"
                 android:layout_below="@+id/textview_username2"
                 android:ellipsize="end"
                 android:lines="1"
                 android:text="@string/city"
                 android:textColor="#ffffff"
-                android:textSize="15sp"
+                android:textSize="@dimen/text_size_small"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textview_money2"
-                android:layout_width="160dp"
-                android:layout_height="35dp"
+                android:layout_width="@dimen/layout_width_160"
+                android:layout_height="@dimen/layout_height_35"
                 android:layout_alignRight="@+id/imageview_useravatar2"
                 android:layout_alignEnd="@+id/imageview_useravatar2"
                 android:layout_below="@+id/imageview_useravatar2"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="@dimen/layout_marginTop_10"
                 android:background="@drawable/button_money2"
                 android:gravity="center_horizontal"
-                android:paddingTop="5dp"
+                android:paddingTop="@dimen/paddingTop_5"
                 android:text="@string/money_default"
                 android:textColor="#000000"
-                android:textSize="16sp"
+                android:textSize="@dimen/text_size_xsmall"
                 android:textStyle="bold" />
             />
         </RelativeLayout>
@@ -165,14 +168,14 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="@dimen/layout_marginTop_20">
 
         <Button
             android:id="@+id/button_save1"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginEnd="20dp"
+            android:layout_width="@dimen/layout_width_50"
+            android:layout_height="@dimen/layout_height_50"
+            android:layout_marginRight="@dimen/layout_marginRight_20"
+            android:layout_marginEnd="@dimen/layout_marginRight_20"
             android:layout_toLeftOf="@+id/button_save2"
             android:layout_toStartOf="@+id/button_save2"
             android:background="@drawable/save1"
@@ -180,18 +183,18 @@
 
         <Button
             android:id="@+id/button_save2"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="@dimen/layout_width_50"
+            android:layout_height="@dimen/layout_height_50"
             android:layout_centerInParent="true"
             android:background="@drawable/save2"
             android:onClick="audienceHelp"/>
 
         <Button
             android:id="@+id/button_save3"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginStart="20dp"
+            android:layout_width="@dimen/layout_width_50"
+            android:layout_height="@dimen/layout_height_50"
+            android:layout_marginLeft="@dimen/layout_marginLeft_20"
+            android:layout_marginStart="@dimen/layout_marginLeft_20"
             android:layout_toRightOf="@+id/button_save2"
             android:layout_toEndOf="@+id/button_save2"
             android:background="@drawable/save3"
@@ -202,7 +205,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="@dimen/layout_marginTop_10">
 
         <FrameLayout
             android:layout_width="wrap_content"
@@ -210,27 +213,31 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="2dp"
+                android:layout_height="@dimen/layout_height_2"
                 android:layout_gravity="center_vertical"
-                android:layout_marginTop="3dp"
+                android:layout_marginTop="@dimen/layout_marginTop_3"
                 android:background="#FFF" />
 
             <TextView
                 android:id="@+id/textview_tablequestion"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginTop="18dp"
+                android:layout_height="@dimen/layout_height_150"
+                android:layout_marginLeft="@dimen/layout_marginLeft_5"
+                android:layout_marginStart="@dimen/layout_marginLeft_5"
+                android:layout_marginEnd="@dimen/layout_marginRight_5"
+                android:layout_marginRight="@dimen/layout_marginRight_5"
+                android:layout_marginTop="@dimen/layout_marginTop_18"
                 android:background="@drawable/table_question"
                 android:gravity="center_horizontal|center_vertical"
-                android:paddingBottom="15dp"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:paddingTop="5dp"
+                android:paddingBottom="@dimen/paddingBottom_15"
+                android:paddingLeft="@dimen/paddingLeft_20"
+                android:paddingStart="@dimen/paddingLeft_20"
+                android:paddingEnd="@dimen/paddingRight_20"
+                android:paddingRight="@dimen/paddingRight_20"
+                android:paddingTop="@dimen/paddingTop_5"
                 android:text="@string/question"
                 android:textColor="#FFF"
-                android:textSize="20sp"
+                android:textSize="@dimen/text_size_xlarge"
                 android:textStyle="bold" />
         </FrameLayout>
 
@@ -238,31 +245,33 @@
         <TextView
             android:id="@+id/textview_moneyquestion"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginLeft="60dp"
-            android:layout_marginRight="60dp"
+            android:layout_height="@dimen/layout_height_50"
+            android:layout_marginLeft="@dimen/layout_marginLeft_60"
+            android:layout_marginStart="@dimen/layout_marginLeft_60"
+            android:layout_marginEnd="@dimen/layout_marginRight_60"
+            android:layout_marginRight="@dimen/layout_marginRight_60"
             android:background="@drawable/money_question"
             android:gravity="center_horizontal|center_vertical"
-            android:paddingBottom="5dp"
+            android:paddingBottom="@dimen/paddingBottom_5"
             android:text="@string/money_default"
             android:textColor="#FFF"
-            android:textSize="20sp"
+            android:textSize="@dimen/text_size_xlarge"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textview_numberquestion"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="@dimen/layout_width_50"
+            android:layout_height="@dimen/layout_height_50"
             android:layout_alignLeft="@+id/textview_moneyquestion"
             android:layout_alignStart="@+id/textview_moneyquestion"
             android:layout_alignTop="@+id/textview_moneyquestion"
             android:background="@drawable/number_question"
             android:gravity="center_horizontal|center_vertical"
-            android:paddingBottom="5dp"
-            android:paddingRight="4dp"
+            android:paddingBottom="@dimen/paddingBottom_5"
+            android:paddingRight="@dimen/paddingRight_4"
             android:text="@string/no_question"
             android:textColor="#FFF"
-            android:textSize="20sp"
+            android:textSize="@dimen/text_size_xlarge"
             android:textStyle="bold" />
     </RelativeLayout>
 
@@ -270,6 +279,6 @@
         layout="@layout/layout_answer_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="@dimen/layout_marginTop_20" />
 </LinearLayout>
 
