--- a/Faster5/app/src/main/res/layout/layout_check_quit.xml
+++ b/Faster5/app/src/main/res/layout/layout_check_quit.xml
@@ -8,8 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
+        android:layout_marginLeft="@dimen/layout_marginLeft_40"
+        android:layout_marginRight="@dimen/layout_marginRight_40"
         android:background="@drawable/xml_popup_bg_white"
         android:orientation="vertical">
 
@@ -17,15 +17,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/layout_marginTop_10"
             android:text="@string/title_quit_popup"
             android:textColor="#00366D"
-            android:textSize="30sp" />
+            android:textSize="@dimen/text_size_huge" />
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:layout_marginTop="10dp"
+            android:layout_height="@dimen/layout_height_3"
+            android:layout_marginTop="@dimen/layout_marginTop_10"
             android:background="#00366D" />
 
         <TextView
@@ -33,56 +33,56 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginLeft="@dimen/layout_marginLeft_10"
+            android:layout_marginRight="@dimen/layout_marginRight_10"
+            android:layout_marginTop="@dimen/layout_marginTop_30"
             android:gravity="center"
             android:maxLines="2"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
+            android:paddingLeft="@dimen/paddingLeft_10"
+            android:paddingRight="@dimen/paddingRight_10"
             android:text="@string/question_quit_popup"
             android:textColor="#EEA542"
-            android:textSize="22sp" />
+            android:textSize="@dimen/text_size_xlarge" />
 
 
         <Button
             android:id="@+id/button_continue"
-            android:layout_width="250dp"
-            android:layout_height="50dp"
+            android:layout_width="@dimen/layout_width_250"
+            android:layout_height="@dimen/layout_height_50"
             android:layout_gravity="center"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginLeft="@dimen/layout_marginLeft_30"
+            android:layout_marginRight="@dimen/layout_marginRight_30"
+            android:layout_marginTop="@dimen/layout_marginTop_30"
             android:background="@drawable/answer0"
-            android:paddingBottom="10dp"
+            android:paddingBottom="@dimen/paddingBottom_10"
             android:text="@string/btnNo_quit_popup"
             android:textAllCaps="false"
             android:textColor="#ffffff"
-            android:textSize="18sp"
+            android:textSize="@dimen/text_size_large"
             android:textStyle="bold" />
 
 
         <Button
             android:id="@+id/button_quit"
-            android:layout_width="250dp"
-            android:layout_height="50dp"
+            android:layout_width="@dimen/layout_width_250"
+            android:layout_height="@dimen/layout_height_50"
             android:layout_gravity="center"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginLeft="@dimen/layout_marginLeft_30"
+            android:layout_marginRight="@dimen/layout_marginRight_30"
+            android:layout_marginTop="@dimen/layout_marginTop_10"
             android:background="@drawable/answer0"
-            android:paddingBottom="10dp"
+            android:paddingBottom="@dimen/paddingBottom_10"
             android:text="@string/btnYes_quit_popup"
             android:textAllCaps="false"
             android:textColor="#ffffff"
-            android:textSize="18sp"
+            android:textSize="@dimen/text_size_large"
             android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/imgView_loading"
-            android:layout_width="200dp"
-            android:layout_height="100dp"
+            android:layout_width="@dimen/layout_width_200"
+            android:layout_height="@dimen/layout_height_100"
             android:layout_gravity="center"
-            android:layout_marginTop="5dp" />
+            android:layout_marginTop="@dimen/layout_marginTop_5" />
     </LinearLayout>
 </RelativeLayout>
