--- a/Faster5/app/src/main/res/layout/layout_maintain_popup.xml
+++ b/Faster5/app/src/main/res/layout/layout_maintain_popup.xml
@@ -8,8 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
+        android:layout_marginLeft="@dimen/layout_marginLeft_40"
+        android:layout_marginRight="@dimen/layout_marginRight_40"
         android:background="@drawable/xml_popup_bg_white"
         android:orientation="vertical">
 
@@ -17,48 +17,48 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/layout_marginTop_10"
             android:text="@string/title_baotri"
             android:textColor="#00366D"
-            android:textSize="30sp" />
+            android:textSize="@dimen/text_size_huge" />
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:layout_marginTop="10dp"
+            android:layout_height="@dimen/layout_height_3"
+            android:layout_marginTop="@dimen/layout_marginTop_10"
             android:background="#00366D" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginBottom="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginBottom="@dimen/layout_marginBottom_20"
+            android:layout_marginLeft="@dimen/layout_marginLeft_20"
+            android:layout_marginRight="@dimen/layout_marginRight_20"
+            android:layout_marginTop="@dimen/layout_marginTop_30"
             android:gravity="center"
             android:maxLines="2"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
+            android:paddingLeft="@dimen/paddingLeft_10"
+            android:paddingRight="@dimen/paddingRight_10"
             android:text="@string/text_baotri"
             android:textColor="#EEA542"
-            android:textSize="20sp" />
+            android:textSize="@dimen/text_size_xlarge" />
 
 
         <Button
             android:id="@+id/button_okay"
-            android:layout_width="250dp"
-            android:layout_height="50dp"
+            android:layout_width="@dimen/layout_width_250"
+            android:layout_height="@dimen/layout_height_50"
             android:layout_gravity="center"
-            android:layout_marginBottom="20dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
+            android:layout_marginBottom="@dimen/layout_marginBottom_20"
+            android:layout_marginLeft="@dimen/layout_marginLeft_20"
+            android:layout_marginRight="@dimen/layout_marginRight_20"
             android:background="@drawable/answer0"
-            android:paddingBottom="10dp"
+            android:paddingBottom="@dimen/paddingBottom_10"
             android:text="@string/btnYes_quit_popup"
             android:textAllCaps="false"
             android:textColor="#ffffff"
-            android:textSize="18sp"
+            android:textSize="@dimen/text_size_large"
             android:textStyle="bold" />
 
 
