--- a/Faster5/app/src/main/res/layout/layout_popup_rule.xml
+++ b/Faster5/app/src/main/res/layout/layout_popup_rule.xml
@@ -10,25 +10,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="50dp">
+        android:layout_marginBottom="@dimen/layout_marginBottom_50">
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="2dp"
+            android:layout_height="@dimen/layout_height_2"
             android:layout_gravity="center_vertical"
-            android:layout_marginBottom="4dp"
+            android:layout_marginBottom="@dimen/layout_marginBottom_4"
             android:background="#FFF" />
 
         <Button
             android:id="@+id/button_skip"
-            android:layout_width="200dp"
-            android:layout_height="50dp"
+            android:layout_width="@dimen/layout_width_250"
+            android:layout_height="@dimen/layout_height_50"
             android:layout_gravity="center_horizontal|center_vertical"
             android:background="@drawable/answer_wrong"
-            android:paddingBottom="8dp"
+            android:paddingBottom="@dimen/paddingBottom_8"
             android:text="@string/skip_text"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
+            android:layout_marginLeft="@dimen/layout_marginLeft_50"
+            android:layout_marginRight="@dimen/layout_marginRight_50"
             android:textColor="#fff"
             android:textStyle="bold" />
 
